# PyConfigr

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  tempfile  test_auto_labelling.txt
.githooks/: commit-msg  post-checkout
.githooks/templates/: checkout-warning.txt  commit-blocked.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: general.md
.github/automations/auto_labelling/: labels.json
.github/config/: README.md  labels.json  pr-labeling.json
.github/templates/: milestone-conflict-comment.md  milestone-conflict.md  pr-invalid-branch.md  pr-missing-issue.md
.github/workflows/: auto-label-pr.yml  ci.yaml  pr-lifecycle.yml  python-package.yml  sync-labels.yml  sync-main-to-dev.yml  validate-pr.yml
scripts/: setup-hooks.py  setup_labels.py  test_pyconfigr_integration.py
src/pyconfigr/: __init__.py  builder.py  exceptions.py
src/pyconfigr/loaders/: __init__.py  base.py  env.py  json.py  manager.py  toml.py  yaml.py
tests/: __init__.py  conftest.py  test_builder.py
tests/integration/: conftest.py  test_env_loading.py  test_fluent_api.py  test_json_loading.py  test_multi_source_merging.py  test_optional_files.py  test_toml_loading.py  test_unsupported_formats.py  test_validation.py  test_yaml_loading.py
tests/loaders/: test_base.py  test_env.py  test_manager.py
tests/unit/: test_builder.py  test_exceptions.py
tests/unit/loaders/: __init__.py  test_json.py  test_manager.py  test_toml.py  test_yaml.py
